--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="flex justify-between items-center">
           <div>
             <h1 class="text-6xl font-medium mb-21 ">Hello, I’m <br>
-              Brooklyn Gilbert</h1>
+              Hikmatulloh Tohirov</h1>
             <p class="text-[#556070]">I'm a Freelance UI/UX Designer and Developer based in London, England. <br> I
               strives to build immersive and
               beautiful web applications through <br> carefully crafted code and user-centric design.</p>
